--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,77 @@ main{
 .attribution { font-size: 11px; text-align: center; position: absolute; bottom: 0; width: 100%}
 .attribution a { color: hsl(228, 45%, 44%); }
 
+.card{
+    width: 85vw;
+    height: 50vh;
+    margin: 25vh auto;
+    border-radius: 25px;
+    background-color: white;
+}
+
+.card .card_header{
+    background-image: url('images/bg-pattern-card.svg');
+    width: 100%;
+    height: 40%;
+    border-radius: 25px 25px 0 0;
+}
+
+.card .card_body{
+    width: 100%;
+    height: 40%;
+}
+
+.card .card_body .user-img{
+    width: 30%;
+    position: absolute;
+    left: 35%;
+    margin-top: -40px;
+    border: white solid 7px;
+    border-radius: 50%;
+}
+
+.card_body div{
+    width: 100%;
+    text-align: center;
+    position: relative;
+    bottom: -70px;
+}
+
+.card_body div p:first-child{
+    font-weight: bold;
+}
+
+.card_body div p:first-child span{
+    color: var(--dark-gray);
+}
+
+.card_body div p:nth-child(2){
+    color: var(--dark-gray);
+    font-weight:normal;
+}
+
+.card .card_footer{
+    width: 100%;
+    height: 20%;
+    border-top:var(--dark-gray) solid 1px;
+}
+
+.card .card_footer div{
+    float: left; /* Float all child divs to the left */
+    width: 33.33%; /* Set a width of one-third for each child div */
+    text-align: center; /* Center the text inside each child div */
+}
+
+.card .card_footer div p:first-child{
+    font-weight: bold;
+    color: var(--dark-grayish-blue)
+}
+
+.card .card_footer div p:nth-child(2){
+    font-weight: normal;
+    color: var(--dark-gray)
+}
+
 @media screen and (min-width: 1440px) {
 
     .top-left-bg-img{
