--- a/styles.css
+++ b/styles.css
@@ -65,14 +65,14 @@ main{
 
 .top-left-bg-img{
     position: fixed;
-    left: -170px;
-    top: -186px;
+    left: -50vw;
+    top: -25vh;
 }
 
 .bottom-right-bg-img{
     position: fixed;
-    right: -170px;
-    bottom: -186px;
+    right:  -50vw;
+    bottom: -25vh;
 }
 
 .attribution { font-size: 11px; text-align: center; position: absolute; bottom: 0; width: 100%}
@@ -84,6 +84,7 @@ main{
     margin: 25vh auto;
     border-radius: 25px;
     background-color: white;
+    max-width: 450px;
 }
 
 .card .card_header{
@@ -105,6 +106,7 @@ main{
     margin-top: -40px;
     border: white solid 7px;
     border-radius: 50%;
+    max-width: 1em;
 }
 
 .card_body div{
@@ -149,16 +151,19 @@ main{
     color: var(--dark-gray)
 }
 
-@media screen and (min-width: 1440px) {
-
+@media screen and (min-width: 1380px) {
     .top-left-bg-img{
-        left: -251px;
-        top: -630px;
+        width: 50vw;
+        height: 187vh;
+        left: 30px;
+        top: -960px;
     }
 
     .bottom-right-bg-img{
-        right: -251px;
-        bottom: -630px;
+        width: 75vw;
+        height: 180vh;
+        right: -306px;
+        bottom:  -880px;
     }
 }
 
